Обновление. В таблицах добавлены сортировки по-умолчанию

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <div class="row">
         <div class="col-4 display">
             <h3 class="text-center">Виновники упавших сборок</h3>
-            <table class="table">
+            <table id="table-counter" class="table">
                 <caption>Виновники упавших сборок</caption>
                 <thead>
                     <tr>
@@ -54,7 +54,7 @@
         </div>
         <div class="col">
             <h3 class="text-center">Все голоса</h3>
-            <table class="table">
+            <table id="table-all-votes" class="table">
                 <caption>Все голоса</caption>
                 <thead>
                     <tr>
