--- a/templates/index.html
+++ b/templates/index.html
@@ -20,43 +20,34 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-        <div class="col-4 display">
-            <h3 class="text-center">Виновники упавших сборок</h3>
-            <table id="table-counter" class="table">
+        <h3 class="w-100">Виновники упавших сборок</h3>
+        <div class="col">
+            <table id="table-counter" class="table table-striped table-bordered">
                 <caption>Виновники упавших сборок</caption>
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th>Кто</th>
                         <th>Сколько</th>
                         <th>Действия</th>
                     </tr>
                 </thead>
-                <tbody>
-                    {% for name, value in name_by_counter.items() %}
-                    <tr data-name="{{ name }}">
-                        <td>{{ name }}</td>
-                        <td>{{ value }}</td>
-                        <td>
-                            <button
-                                type="button"
-                                class="btn btn-primary btn-sm"
-                                onclick="add_vote('{{ name }}')"
-                            >
-                                +
-                            </button>
-                        </td>
-                    </tr>
-                    {% endfor %}
-                </tbody>
             </table>
         </div>
         <div class="col">
-            <h3 class="text-center">Все голоса</h3>
-            <table id="table-all-votes" class="table">
+            <div class="row">
+                <div class="col-auto">Дней без происшествий:</div>
+                <div class="col-auto days-without-incident">-</div>
+            </div>
+        </div>
+    </div>
+    <div class="row mt-5">
+        <h3 class="w-100">Все голоса</h3>
+        <div class="col">
+            <table id="table-all-votes" class="table table-striped table-bordered">
                 <caption>Все голоса</caption>
-                <thead>
+                <thead class="thead-dark">
                     <tr>
                         <th>Ид.</th>
                         <th>Кто</th>
@@ -69,7 +60,11 @@
                 </thead>
                 <tbody>
                     {% for vote in all_votes %}
-                    <tr data-id="{{ vote.id }}">
+                    <tr
+                        data-id="{{ vote.id }}"
+                        data-append-date="{{ vote.append_date.isoformat() }}"
+                        data-cancel-date="{{ vote.cancel_date.isoformat() if vote.cancel_date else 'null' }}"
+                    >
                         <td>{{ vote.id }}</td>
                         <td>{{ vote.name.name }}</td>
                         <td>{{ vote.sender_ip }}</td>
