--- a/templates/index.html
+++ b/templates/index.html
@@ -23,8 +23,8 @@
     <div class="container">
         <div class="row">
             <h3 class="w-100">Виновники упавших сборок</h3>
-            <div class="col">
-                <table id="table-counter" class="table table-striped table-bordered">
+            <div class="col-8">
+                <table id="table-counter" class="table table-striped table-bordered w-100">
                     <caption>Виновники упавших сборок</caption>
                     <thead class="thead-dark">
                         <tr>
@@ -45,7 +45,7 @@
         <div class="row mt-5">
             <h3 class="w-100">Все голоса</h3>
             <div class="col">
-                <table id="table-all-votes" class="table table-striped table-bordered">
+                <table id="table-all-votes" class="table table-striped table-bordered w-100">
                     <caption>Все голоса</caption>
                     <thead class="thead-dark">
                         <tr>
