--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='DataTables/datatables.min.css') }}"/>
     <script type="text/javascript" src="{{ url_for('static', filename='DataTables/datatables.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='DataTables/i18n_ru.js') }}"></script>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-dark.min_3.0.0.css') }}"/>
 
