--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <title>{{ title }}</title>
 
     <script type="text/javascript" src="{{ url_for('static', filename='js/jquery-3.1.1.min.js') }}"></script>
-    <script type="text/javascript" src="{{url_for('static', filename='js/index.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.noty.packaged.min.js') }}"></script>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap-4.4.1/bootstrap.css') }}">
     <script src="{{ url_for('static', filename='bootstrap-4.4.1/bootstrap.bundle.js') }}"></script>
@@ -18,9 +18,76 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap-dark.min_3.0.0.css') }}"/>
 
+    <script type="text/javascript" src="{{url_for('static', filename='js/index.js') }}"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/index.css') }}">
 </head>
 <body>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand mr-auto" href="#">
+            <img src="/favicon.ico" width="30" height="30" class="d-inline-block align-top" alt="">
+            {{ title }}
+        </a>
+
+        {% if current_user.is_authenticated %}
+        <div class="dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+                {{ current_user.id }}
+            </a>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="/logout">
+                    <!--https://icons.getbootstrap.com/icons/box-arrow-right/-->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"/>
+                        <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"/>
+                    </svg>
+                    Выход
+                </a>
+            </div>
+        </div>
+        {% else %}
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modelLogin">
+            <!--https://icons.getbootstrap.com/icons/door-open/-->
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-door-open" viewBox="0 0 16 16">
+                <path d="M8.5 10c-.276 0-.5-.448-.5-1s.224-1 .5-1 .5.448.5 1-.224 1-.5 1z"/>
+                <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z"/>
+            </svg>
+            Войти
+        </button>
+        {% endif %}
+    </nav>
+    <div class="modal fade" id="modelLogin" tabindex="-1" role="dialog" aria-labelledby="modelLoginTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <form action="/login" method="post" class="form" role="form">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="modelLoginTitle">Логин</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="login">Логин</label>
+                            <input type="text" class="form-control" id="login" name="login" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Пароль</label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <div class="form-group form-check">
+                            <input type="checkbox" class="form-check-input" name="remember_me" id="remember_me" checked>
+                            <label class="form-check-label" for="remember_me">Запомнить меня</label>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Отмена</button>
+                        <button type="submit" class="btn btn-primary">Войти</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <h3 class="w-100">Виновники упавших сборок</h3>
@@ -52,8 +119,7 @@
                         <tr>
                             <th>Ид.</th>
                             <th>Кто</th>
-                            <th>IP</th>
-                            <th>Хост</th>
+                            <th>Логин</th>
                             <th>Добавлено</th>
                             <th>Отменено</th>
                             <th></th>
